fix(intra): ensure markdown closer covers full screen on scroll

--- a/intra/styles.css
+++ b/intra/styles.css
@@ -30,12 +30,13 @@ nav .navbar {
       border-radius: 13px;
 
       .closer {
+        position: fixed;
         width: 100%;
-        position: absolute;
         height: 100%;
         z-index: 1;
       }
       .content {
+        position: relative;
         z-index: 2;
         width: 70%;
         margin: auto;
